typescript/checker/tests/conformance/es6/templates/templateStringWithEmbeddedYieldKeyword.ts.stderr
error: Expected LParen, got Some(LBrace)
 --> $DIR/tests/conformance/es6/templates/templateStringWithEmbeddedYieldKeyword.ts:1:15
  |
1 | function* gen {
  |               ^

